Colaboratory를 통해 생성됨

--- a/Standard_library.ipynb
+++ b/Standard_library.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyM2ywpyvMst3q7ablXx6ooa",
+      "authorship_tag": "ABX9TyN7biJQqqt38hVBxGkhCtJP",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -39,7 +39,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "## 1. 내장 함수\n",
+        "## 내장 함수\n",
         ": 기본 내장 라이브러리"
       ],
       "metadata": {
@@ -256,7 +256,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "## 2. itertools\n",
+        "## itertools\n",
         ": python에서 반복되는 데이터를 처리하는 기능을 포함하고 있는 라이브러리"
       ],
       "metadata": {
