--- a/BOJ/BOJ_4949.ipynb
+++ b/BOJ/BOJ_4949.ipynb
@@ -50,10 +50,36 @@
         "        print('no')\n"
       ],
       "metadata": {
-        "id": "fVqJCZPHWrzd"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "fVqJCZPHWrzd",
+        "outputId": "f893179c-24a3-43e1-ac22-cda00c8544e5"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 1,
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "So when I die (the [first] I will see in (heaven) is a score list).\n",
+            "yes\n",
+            "[ first in ] ( first out ).\n",
+            "yes\n",
+            "Half Moon tonight (At least it is better than no Moon at all].\n",
+            "no\n",
+            "A rope may form )( a trail in a maze.\n",
+            "no\n",
+            "Help( I[m being held prisoner in a fortune cookie factory)].\n",
+            "no\n",
+            "([ (([( [ ] ) ( ) (( ))] )) ]).\n",
+            "yes\n",
+            " .\n",
+            "yes\n",
+            ".\n"
+          ]
+        }
+      ]
     }
   ]
 }
